Montée de version jdk 17 + corrections simples Sonar